data/all_generated_tests/raw_wast_tests/unreachable_MismanagementofBlockNesting_1229.wast
;; 10. **Blocks Mixed with Unreachable and Multiple Br_instructions:**    - Design blocks mixed with `unreachable` and various `br` instructions targeting outer blocks. This ensures that the `br` instructions do not mismanage the nested block exits upon encountering `unreachable` first, resulting in consistent trapping behavior.  Each of these tests aims to check for mismanagement of block nesting in scenarios involving the `unreachable` instruction, ensuring that the flow control is correctly handled and traps are consistently triggered across different implementations.

(assert_invalid
  (module
    (func $mixed_block_unreachable_br
      (block 
        (block 
          (unreachable) 
          (br 1)
        ) 
        (br 0)
      )
    )
  )
  "type mismatch"
)